service/wip -> added all endpoints in swagger ui
